# fw4spl-ext-deps

./: .fw4spl-deps  .hgtags  CHANGELOG.md  CMakeLists.txt
CXSparse/: CMakeLists.txt
aram/: CMakeLists.txt
ceresSolver/: CMakeLists.txt
cgogn/: CMakeLists.txt
cmake/findBinpkgs/: FindLog4Cpp.cmake  FindODIL.cmake  FindORB_SLAM2.cmake  FindZEROMQ.cmake
cryptopp/: CMakeLists.txt
curl/: CMakeLists.txt
gflags/: CMakeLists.txt
gflags/patch/: msvc2015.diff
glog/: CMakeLists.txt
glog/patch/: CMakeLists.diff  config.h.in.diff  logging.cc.diff  windows_config.diff
infinitam/: CMakeLists.txt
infinitam/patch/: macos.diff
jsoncpp/: CMakeLists.txt
libarchive/: CMakeLists.txt
log4cpp/: CMakeLists.txt
odil/: CMakeLists.txt
openigtlink/: CMakeLists.txt
orbslam2/: CMakeLists.txt
pangolin/: CMakeLists.txt
pangolin/patch/: pangolin.diff
vlc/: CMakeLists.txt
vlfeat/: vlfeat_linux.cmake  vlfeat_windows.cmake
wxWidgets/: CMakeLists.txt
zeromq/: CMakeLists.txt
zeromq/patch/: CMakeLists.txt  NSIS.template32.in  NSIS.template64.in  main_CMakeLists.txt  platform.hpp.in
zeromq/patch/Modules/: TestZMQVersion.cmake  ZMQSourceRunChecks.cmake
